# ux-animate

./: .gitignore  404.html  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  README.md  SECURITY.md  book.toml  chapter_1.html  index.html  print.html
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: 01-index.md  02-cairolib.md  03-cairodefinitions.md  04-cairobackends.md  05-basicdrawing.md  06-shapesfills.md  07-gradients.md  08-transparency.md  09-compositing.md  10-clippingmasking.md  11-transformations.md  12-cairotext.md  13-cairoimages.md  14-root.md  easing.rs  interpolate.rs  lib.rs  macros.rs  prelude.rs  rt.rs
src/backend/: cairo_canvas.rs  mod.rs  web_canvas.rs
src/canvas/: cairoimpl.rs  mod.rs  webimpl.rs
src/canvas/rough/: canvas.rs  generator.rs  geometry.rs  math.rs  mod.rs  renderer.rs  svg.rs
src/canvas/rough/fillers/: dashed.rs  dot.rs  hachure.rs  hatch.rs  mod.rs  scanline_hachure.rs  zigzag.rs  zigzag_line.rs
src/legacy/: action.rs  actor.rs  actor_box.rs  actor_canvas.rs  actor_meta.rs  align_constraint.rs  alpha.rs  animatable.rs  backend.rs  behaviour.rs  behaviour_ellipse.rs  behaviour_rotate.rs  bin_layout.rs  bind_constraint.rs  binding_pool.rs  blur_effect.rs  box_layout.rs  brightness_contrast_effect.rs  child_meta.rs  click_action.rs  clip_node.rs  clone.rs  color.rs  color_node.rs  colorize_effect.rs  constraint.rs  container.rs  content.rs  deform_effect.rs  desaturate_effect.rs  device_manager.rs  drag_action.rs  drop_action.rs  effect.rs  enums.rs  event.rs  event_button.rs  event_crossing.rs  event_key.rs  event_motion.rs  (+69 more)
src/path/: angle.rs  length.rs  mod.rs  mod1.rs  options.rs  parser.rs  segment.rs  stream.rs  writer.rs
src/pure/: action.rs  actor.rs  actor_box.rs  actor_canvas.rs  actor_meta.rs  align_constraint.rs  alpha.rs  animatable.rs  backend.rs  behaviour.rs  behaviour_ellipse.rs  behaviour_rotate.rs  bin_layout.rs  bind_constraint.rs  binding_pool.rs  blur_effect.rs  box_.rs  box_layout.rs  brightness_contrast_effect.rs  child_meta.rs  click_action.rs  clip_node.rs  clone.rs  color.rs  color_node.rs  colorize_effect.rs  constraint.rs  container.rs  content.rs  deform_effect.rs  desaturate_effect.rs  device_manager.rs  drag_action.rs  drop_action.rs  effect.rs  enums.rs  event.rs  event_any.rs  event_button.rs  event_crossing.rs  (+75 more)
src/pure/platform/: mod.rs  stage_window.rs
src/runtime/: mod.rs
src/runtime/lottie/: composition.rs  frame_rate.rs  l.rs  lottie_builder.rs  lottie_delegates.rs  lottie_drawable.rs  lottie_image_asset.rs  lottie_property.rs  mod.rs  options.rs  performance_tracker.rs  raw_lottie.rs  render_lottie.rs  value_delegate.rs
src/runtime/lottie/animation/: mod.rs
src/runtime/lottie/animation/content/: base_stroke_content.rs  compound_trim_path_content.rs  content.rs  content_group.rs  drawing_content.rs  ellipse_content.rs  fill_content.rs  gradient_fill_content.rs  gradient_stroke_content.rs  greedy_content.rs  key_path_element_content.rs  merge_paths_content.rs  mod.rs  modifier_content.rs  path_content.rs  polystar_content.rs  rectangle_content.rs  repeater_content.rs  shape_content.rs  stroke_content.rs  trim_path_content.rs
src/runtime/lottie/animation/keyframe/: base_keyframe_animation.rs  color_keyframe_animation.rs  double_keyframe_animation.rs  gradient_color_keyframe_animation.rs  integer_keyframe_animation.rs  keyframe_animation.rs  mask_keyframe_animation.rs  mod.rs  path_keyframe.rs  path_keyframe_animation.rs  point_keyframe_animation.rs  shape_keyframe_animation.rs  split_dimension_path_keyframe_animation.rs  text_keyframe_animation.rs  transform_keyframe_animation.rs  value_callback_keyframe_animation.rs
src/runtime/lottie/model/: cubic_curve_data.rs  document_data.rs  font.rs  font_character.rs  key_path.rs  key_path_element.rs  marker.rs  mod.rs
src/runtime/lottie/model/animatable/: animatable_color_value.rs  animatable_double_value.rs  animatable_gradient_color_value.rs  animatable_integer_value.rs  animatable_path_value.rs  animatable_point_value.rs  animatable_scale_value.rs  animatable_shape_value.rs  animatable_split_dimension_path_value.rs  animatable_text_frame.rs  animatable_text_properties.rs  animatable_transform.rs  animatable_value.rs  base_animatable_value.rs  mod.rs
src/runtime/lottie/model/content/: circle_shape.rs  content_model.rs  gradient_color.rs  gradient_fill.rs  gradient_stroke.rs  gradient_type.rs  mask.rs  merge_paths.rs  mod.rs  polystar_shape.rs  rectangle_shape.rs  repeater.rs  shape_data.rs  shape_fill.rs  shape_group.rs  shape_path.rs  shape_stroke.rs  shape_trim_path.rs
src/runtime/lottie/model/layer/: base_layer.rs  composition_layer.rs  image_layer.rs  layer.rs  mod.rs  null_layer.rs  shape_layer.rs  solid_layer.rs  text_layer.rs
src/runtime/lottie/parser/: animatable_path_value_parser.rs  animatable_text_properties_parser.rs  animatable_transform_parser.rs  animatable_value_parser.rs  circle_shape_parser.rs  content_model_parser.rs  font_character_parser.rs  font_parser.rs  gradient_color_parser.rs  gradient_fill_parser.rs  gradient_stroke_parser.rs  json_utils.rs  keyframe_parser.rs  keyframes_parser.rs  layer_parser.rs  lottie_composition_parser.rs  mask_parser.rs  merge_paths_parser.rs  mod.rs  path_keyframe_parser.rs  polysar_shape_parser.rs  rectangle_shape_parser.rs  repeat_parser.rs  shape_fill_parser.rs  shape_group_parser.rs  shape_path_parser.rs  shape_stroke_parser.rs  shape_trim_path_parser.rs  value_parser.rs
src/runtime/lottie/parser/moshi/: buffer.rs  json_reader.rs  json_scope.rs  json_utf8_reader.rs  mod.rs
src/runtime/lottie/providers/: asset_provider.rs  file_provider.rs  load_image.rs  lottie_provider.rs  memory_provider.rs  mod.rs  network_provider.rs
src/runtime/lottie/utils/: debug_path.rs  gamma_evaluator.rs  mean_calculator.rs  misc.rs  mod.rs  pair.rs  path_factory.rs  path_interpolator.rs  utils.rs
src/runtime/lottie/value/: keyframe.rs  lottie_frame_info.rs  lottie_value_callback.rs  mod.rs
src/tween/: easing.rs  group.rs  interpolation.rs  mod.rs  sequence.rs  tests.rs  tween.rs
