[package]
name = "ux-animate"
version = "0.1.5"
authors = ["Victor Dudochkin <dudochkin.victor@gmail.com>"]
readme = "README.md"
homepage = "https://angular-rust.github.io/ux-animate"
repository = "https://github.com/angular-rust/ux-animate"
documentation = "https://docs.rs/ux-animate"
description = "Backend and runtime agnostic animation library"
keywords = ["wasm", "web", "webassembly", "gtk", "cairo"]
categories = ["multimedia", "wasm", "web-programming", "gui"]
edition = "2018"
license = "MPL-2.0"

[badges]
maintenance = { status = "actively-developed" }

[lib]
name = "animate"

[package.metadata.docs.rs]
features = ["dox"]

[features]
dox = ["ffi/dox", "glib/dox", "glib-sys/dox", "gobject-sys/dox", "ux-dx/dox"]

[dependencies]
ux-primitives = "0.1"
log = "0.4"
lazy_static = "1.4"
serde = "1.0"
serde_json = "1.0"
bytes = "1.0"
float-cmp = { version = "0.5", default-features = false }
ruex = "0.1"
tiny-skia = "0.5"
rand = "0.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ux-dx = "0.1"
libc = "0.2"
bitflags = "1.0"
glib-sys = "0.10"
gio-sys = "0.10"
gobject-sys = "0.10"
cairo-sys-rs = "0.10"
png = "0.16"
cairo-rs = { version = "0.9", features = ["png"] }
gio = { version = "0.9", features = ["v2_58"] }
glib = { version="0.10", features = ["v2_58"] }
pango = { version = "0.9", features = ["v1_42"] }
ffi = { package = "clutter-sys-rs", version="0.1" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
gloo = "0.2"
wasm-bindgen-test = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  'KeyboardEvent',
  "ValidityState",
  "CustomEvent",
  "Node",
  "Element",
  "HtmlElement",
  "Window",
  "Document",
  "CanvasRenderingContext2d",
  "TextMetrics",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "SvgImageElement",
  "HtmlVideoElement",
  "ImageBitmap",
  "CanvasWindingRule",
  "Path2d",
  "CanvasPattern",
  "CanvasGradient",
  "HitRegionOptions",
  "ImageData",
  "DomMatrix"
]

[dev-dependencies]

